fixed text aligns

--- a/styles/palletestyle.css
+++ b/styles/palletestyle.css
@@ -55,7 +55,7 @@ th {
 
 th,
 td {
-    padding-right: 10rem !important;
+    padding-right: 10rem;
 }
 
 .color {
